# lazyarchbuild

./: Cargo.toml
src/: app.rs  canvas.rs  events.rs  lib.rs  main.rs  types.rs
src/component/: menu.rs  mod.rs  package.rs  packages.rs
src/req/: felix.rs  melon.rs  mod.rs
src/tabs/: packages.rs
tests/: canvas.rs
