[package]
name = "lazyarchbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
tui = "0.19"
crossterm = "0.25"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13"
anyhow = "1.0"
typed-builder = "0.10.0"
