[package]
name = "lazyarchbuild"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lzr"
path = "src/bin/lzr.rs"
doc = false

[lib]
test = true

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
tui = "0.19"
crossterm = "0.25"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13"
anyhow = "1.0"
derive_builder = "0.11.2"
